# libOTe

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _makefile  build.py  build.sh  buildAll.ps1  copySourceToLinux.ps1  debug.mak  dist_k1000_n2000_s1000_i2.txt  dist_k1000_n2000_s10_i3.txt  dist_k1000_n2000_s10_i4.txt  dist_k1000_n2000_s10_i5.txt  dist_k1000_n2000_s20_i3.txt  dist_k1000_n2000_s25_i3.txt  dist_k100_n200_s10_i2.txt  dist_k100_n200_s10_i5.txt  dist_k1020_n2040_s10_i3.txt  dist_k1024_n2048_s16_i3.txt  dist_k1024_n2048_s1_i3.txt  dist_k1024_n2048_s32_i3.txt  dist_k1024_n2048_s64_i2.txt  dist_k1024_n2048_s64_i3.txt  dist_k1024_n2048_s8_i3.txt  dist_k2048_n4096_s16_i3.txt  dist_k506_n1012_s46_i1.txt  dist_k50_n100_s10_i1.txt  dist_k50_n100_s10_i2.txt  dist_k50_n100_s10_i3.txt  dist_k50_n100_s10_i4.txt  dist_k50_n100_s10_i5.txt  dist_k50_n100_s25_i2.txt  dist_k50_n100_s50_i2.txt  dist_k512_n1024_s64_i1.txt  dist_k540_n1080_s60_i1.txt  (+4 more)
KyberOT/: CMakeLists.txt  KyberOT.c  KyberOT.vcxproj  KyberOT.vcxproj.filters  Makefile_old  params.h
SimplestOT/: CMakeLists.txt  Keccak-simple.c  SimplestOT.vcxproj  SimplestOT.vcxproj.filters  consts.s  cpucycles.c  crypto_hash.h  fe25519_freeze.s  fe25519_mul.s  fe25519_sub.c  ge25519_dbl_p1p1.s  ge25519_lookup.s  ge25519_lookup_niels.s  ge25519_nielsadd2.s  ge25519_p1p1_to_p2.s  ge25519_setneutral.c  ge4x.c  ge4x_niels_add_p1p1.s  ge4x_pack.c  ge4x_unpack_vartime.c  gfe4x.h  gfe4x_iseq_vartime.c  mains.cpp  network.c  ot_receiver.c  ot_sender.c  ot_sender.h  randombytes.c  randombytes.h  to_4x.h
bitpolymul2/: CMakeLists.txt
frontend/: CLP.cpp  CLP.h  CMakeLists.txt  ExampleBase.cpp  ExampleBase.h  ExampleLogVole.cpp  ExampleLogVole.h  ExampleLogVole2.cpp  ExampleLogVole2.h  ExampleMessagePassing.h  ExampleNChooseOne.cpp  ExampleNChooseOne.h  ExampleSilent.cpp  ExampleSilent.h  ExampleTriples.cpp  ExampleTriples.h  ExampleTwoChooseOne.cpp  ExampleTwoChooseOne.h  ExampleVole.cpp  ExampleVole.h  H4.cpp  UnitTests.cpp  UnitTests.h  benchmark.h  frontend.vcxproj  frontend.vcxproj.filters  main.cpp  miraclTest.cpp  signalHandle.cpp  signalHandle.h  util.cpp  util.h
frontend/Tutorials/: Network.cpp  Network.h
libOTe/: CMakeLists.txt  config.h  config.h.in  libOTe.vcxproj.filters  libOTe.vcxproj.vcxproj  version.h
libOTe/Base/: BaseOT.h  DefaultCurve.h  EKEPopf.h  FeistelMulPopf.h  FeistelMulRistPopf.h  FeistelPopf.h  FeistelRistPopf.h  MRPopf.h  MasnyRindal.cpp  MasnyRindal.h  MasnyRindalBasic.cpp  MasnyRindalBasic.h  MasnyRindalKyber.cpp  MasnyRindalKyber.h  McRosRoy.h  McRosRoyTwist.h  MockOt.h  MoellerPopfOT.h  MoellerPopfOT_impl.h  PopfOT.cpp  PopfOT.h  PopfOT_impl.h  RistrettoPopfOT.h  RistrettoPopfOT_impl.h  SimplestOT.cpp  SimplestOT.h  naor-pinkas.cpp  naor-pinkas.h
libOTe/Common/: ArrayView.h  BitIterator.cpp  BitIterator.h  BitVector.cpp  BitVector.h  ByteStream.cpp  ByteStream.h  Defines.cpp  Defines.h  Exceptions.h  Log.cpp  Log.h  MatrixView.h  Timer.cpp  Timer.h  mpsc_queue.h
libOTe/Crypto/: AES.cpp  AES.h  Commit.h  Curve.cpp  Curve.h  PRNG.cpp  PRNG.h  ShamirSSScheme.cpp  sha.cpp  sha1.h
libOTe/DPF/: BgiEvaluator.cpp  BgiEvaluator.h  BgiGenerator.cpp  BgiGenerator.h  BgiPirClient.cpp  BgiPirClient.h  BgiPirServer.cpp  BgiPirServer.h  BgicksPprf.cpp  BgicksPprf.h
libOTe/Dpf/: DpfMult.h  InvMtxDmpf.h  RegularDpf.h  RevCuckooDmpf.h  SparseDpf.h  SumDmpf.cpp  SumDmpf.h  TernaryDpf.h  TriDpf.h
libOTe/NChooseK/: AknOtReceiver.cpp  AknOtReceiver.h  AknOtSender.cpp  AknOtSender.h
libOTe/NChooseOne/: KkrtNcoOtReceiver.cpp  KkrtNcoOtReceiver.h  KkrtNcoOtSender.cpp  KkrtNcoOtSender.h  NcoOtExt.cpp  NcoOtExt.h
libOTe/Network/: BtAcceptor.cpp  BtAcceptor.h  BtChannel.cpp  BtChannel.h  BtEndpoint.cpp  BtEndpoint.h  BtIOService.cpp  BtIOService.h  BtSocket.h  Channel.cpp  Channel.h  Endpoint.h
libOTe/Tools/: Chunker.h  CoeffCtx.h  Coproto.h  DefaultCurve.h  GenericLinearCode.h  LinearCode.cpp  LinearCode.h  QuasiCyclicCode.h  RepetitionCode.h  ReplicationCode.h  SilentPprf.cpp  SilentPprf.h  Tools.cpp  Tools.h  bch511.h  bch511.txt  bch511_.h  bitpolymul.cpp  bitpolymul.h
libOTe/TwoChooseOne/: BgciksOtExtReceiver.cpp  BgciksOtExtReceiver.h  BgciksOtExtSender.cpp  BgciksOtExtSender.h  ConfigureCode.cpp  ConfigureCode.h  IknpDotExtReceiver.cpp  IknpDotExtReceiver.h  IknpDotExtSender.cpp  IknpDotExtSender.h  IknpOtExtReceiver.cpp  IknpOtExtReceiver.h  IknpOtExtSender.cpp  IknpOtExtSender.h  KosDotExtReceiver.cpp  KosDotExtReceiver.h  KosDotExtSender.cpp  KosDotExtSender.h  KosOtExtReceiver.cpp  KosOtExtReceiver.h  KosOtExtSender.cpp  KosOtExtSender.h  LzKosOtExtReceiver.cpp  LzKosOtExtReceiver.h  LzKosOtExtSender.cpp  LzKosOtExtSender.h  OTExtInterface.cpp  OTExtInterface.h  SilentOtExtReceiver.cpp  SilentOtExtReceiver.h  SilentOtExtSender.cpp  SilentOtExtSender.h  TcoOtDefines.h
libOTe/Vole/: NoisyVoleReceiver.cpp  NoisyVoleReceiver.h  NoisyVoleSender.cpp  NoisyVoleSender.h  SilentVoleReceiver.cpp  SilentVoleReceiver.h  SilentVoleSender.cpp  SilentVoleSender.h  VoleUtil.h
libOTe_Tests/: AES_Tests.cpp  AES_Tests.h  AknOt_Tests.cpp  AknOt_Tests.h  BaseOT_Tests.cpp  BaseOT_Tests.h  BgciksOT_Tests.cpp  BgciksOT_Tests.h  BgiPirTests.cpp  BgiPirTests.h  BgiTests.cpp  BgiTests.h  BinarySolver_Tests.cpp  BinarySolver_Tests.h  BlkAccCode_Tests.cpp  BlkAccCode_Tests.h  BtChannel_Tests.cpp  BtChannel_Tests.h  CMakeLists.txt  Cmp_Tests.cpp  Cmp_Tests.h  Common.cpp  Common.h  Dpf_Tests.cpp  Dpf_Tests.h  EACode_Tests.cpp  EACode_Tests.h  Ecc_Tests.cpp  Ecc_Tests.h  Equality_Tests.cpp  Equality_Tests.h  ExConvCode_Tests.cpp  ExConvCode_Tests.h  Field_Tests.cpp  Field_Tests.h  Foleage_Tests.cpp  Foleage_Tests.h  Foliage_Tests.cpp  Foliage_Tests.h  Goldilocks_Tests.cpp  (+49 more)
libOTe_Tests/cmakeTests/: CMakeLists.txt  CMakePresets.json  main.cpp
libOTe_Tests/testData/: code1280_BCH511.h  code1280_BCH511.txt  code128_BCH511.h  code128_BCH511.txt  code256_BCH511.h  code256_BCH511.txt  code384_BCH511.h  code384_BCH511.txt  code640_BCH511.h  code640_BCH511.txt
(+584 files in other folders)
